--- a/react/public/bootstrap/css/calendar.css
+++ b/react/public/bootstrap/css/calendar.css
@@ -1,14 +1,13 @@
 .wrapper{
-	padding: 15px;
 	display: flex;
 }
 
 .calendar-side{
 	background: #FAFAFA;
 	margin-right: 15px;
-	/* border: 1px solid #555; */
+	/* border: 1px solid #555;  */
 	width: 15%;
-	height: 860px;
+	height: 845px;
 }
 
 .calendar-wrap {
@@ -18,9 +17,18 @@
 	width: 1195px;
 }
 
-.fc-toolbar-chunk {
+.pcoded-content{
+	background: #e9e9e9;
+	padding: 15px;
+}
+
+.fc-toolbar-chunk div {
     display: flex;      
     align-items: center; 
+}
+
+.fc-toolbar-title{
+	margin: 0px 20px !important;
 }
 
 #create-sch{
@@ -29,6 +37,7 @@
 	margin-top: 20px;
 	margin-left: 10%;
 	width: 80%;
+	height: 40px;
 	margin-bottom: 20px;
 }
 
@@ -54,6 +63,7 @@ th.fc-col-header-cell{
 	margin-left: 10px;
 	margin-top: 10px;
 	cursor: pointer;
+	font-size: 14px;
 	
 }
 
@@ -175,10 +185,15 @@ th.fc-col-header-cell{
 
 
 .calPartiList-table{
+	text-align: center;
 	width:100%;
 }
 
 .cParti-selected{
+	background: #e9e9e9;
+}
+
+.selected-rows{
 	background: #e9e9e9;
 }
 
@@ -206,7 +221,8 @@ th.fc-col-header-cell{
 }
 
 #cal-share{
-	padding-right: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 #cal-const{
